@@ -31,6 +31,8 @@ VERSION 2.4.2-Beta 1
       reduce the number of cache-related crashes.
 
   BUGFIXES:
+    * Fix finalization of track copy process to media device collections. (BR238912)
+      Patch by Tommaso Falchi Delitala.
     * Fixed crash on MusicBrainz search. (BR 274956)
     * Avoid crash in ContextView when accessing Plasma::Applet::view().
       (BR 258741)
